src/App.scss
.App {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (1fr)[5];
      grid-template-columns: repeat(5, 1fr);
  -ms-grid-rows: (1fr)[5];
      grid-template-rows: repeat(5, 1fr);
  text-align: center;
  overflow: hidden; }

.StartScreen {
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  grid-column: 1/6;
  -ms-grid-row: 1;
  -ms-grid-row-span: 5;
  grid-row: 1/6;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  justify-items: center;
  overflow: hidden; }

.meme {
  font-family: GaboDrive, sans-serif;
  -webkit-text-stroke: 1px black;
  color: white;
  text-shadow: 3px 3px 0 #000,
 -1px -1px 0 #000,  
 1px -1px 0 #000,
 -1px 1px 0 #000,
 1px 1px 0 #000;
  font-size: 4em;
  margin: 1.2em auto; }

.standard-text {
  font-size: 1.5em;
  font-family: 'Libre Baskerville', serif; }

.sub-text {
  font-size: 1em;
  font-family: serif;
  margin: 0; }

#start, #win {
  margin: 2em;
  height: 50px;
  width: 100px; }

.MazeScreen {
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  grid-column: 1/6;
  -ms-grid-row: 1;
  -ms-grid-row-span: 5;
  grid-row: 1/6;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (1fr)[5];
      grid-template-columns: repeat(5, 1fr);
  -ms-grid-rows: 1fr 70px 1fr;
      grid-template-rows: 1fr 70px 1fr;
  justify-items: center;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: start;
  overflow: hidden; }

.maze {
  z-index: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  grid-column: 1/6;
  -ms-grid-row: 1;
  -ms-grid-row-span: 1;
  grid-row: 1/2;
  -webkit-animation: fallIn 3s;
          animation: fallIn 3s;
  overflow: hidden; }

.memes {
  background-image: url(./meme.svg); }

.weapons {
  background-image: url(./weapon.svg); }

.heals {
  background-image: url(./heal.svg); }

.upstairs {
  background-image: url(./upstairs.svg); }

.downstairs {
  background-image: url(./downstairs.svg); }

.boss {
  background-image: url(./boss.svg); }

.player {
  background-image: url(./player.svg); }

.wall {
  background-image: url(./wall.svg);
  background-size: contain; }

.tunnel {
  background-color: white; }

.transparent {
  background-image: none;
}
  .fog {
  -webkit-animation: fogMaze 2s forwards;
          animation: fogMaze 2s forwards; }

.tile {
  width: 2.5em;
  float: left; }

.boardRow, .tile {
  height: 2.5em; }

// @media (min-width: 480px) {
//   .boardRow .tile {
//     height: 1em; }
//   .tile {
//     width: 1em; } }

.mazeMsg {
  z-index: 2;
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  grid-column: 1/6;
  -ms-grid-row: 2;
  -ms-grid-row-span: 1;
  grid-row: 2/3;
  max-width: 300px;
  max-height: 100px; }

.mazeMsg h2 {
  font-family: GaboDrive, sans-serif;
  -webkit-text-stroke: 1px black;
  color: white;
  text-shadow: 3px 3px 0 #000,
 -1px -1px 0 #000,  
 1px -1px 0 #000,
 -1px 1px 0 #000,
 1px 1px 0 #000;
  font-size: 2em;
  margin: 0px; }

.dPad-container {
  -webkit-animation: fadeIn 3s;
          animation: fadeIn 3s;
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  grid-column: 1/6;
  -ms-grid-row: 3;
  -ms-grid-row-span: 1;
  grid-row: 3/4;
  display: -ms-grid;
  display: grid;
  max-width: 300px;
  -ms-grid-columns: 30px 75px 75px 75px 30px;
      grid-template-columns: 30px 75px 75px 75px 30px;
  -ms-grid-rows: (1fr)[3];
      grid-template-rows: repeat(3, 1fr);
  grid-gap: 2px;
  margin: 0 auto 40px; }
  .dPad-container svg {
    padding-left: 25px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex; }

.hpContainer {
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  grid-column: 1/2;
  -ms-grid-row: 1;
  -ms-grid-row-span: 3;
  grid-row: 1/4;
  width: 22px;
  background: lightgrey;
  color: white;
  padding: 5px; }

.hpBar {
  background: #24d824;
  font-size: .8em;
  color: white; }

.xpContainer {
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  grid-column: 5/6;
  -ms-grid-row: 1;
  -ms-grid-row-span: 3;
  grid-row: 1/4;
  width: 22px;
  background: lightgrey;
  color: white;
  padding: 5px;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  justify-items: center; }

.xpBar {
  background: blue;
  font-size: .8em;
  color: white; }

#up {
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  grid-column: 3/4;
  -ms-grid-row: 1;
  -ms-grid-row-span: 1;
  grid-row: 1/2;
  -webkit-transform: rotate(90deg);
      -ms-transform: rotate(90deg);
          transform: rotate(90deg); }

#up:active svg {
  -webkit-filter: drop-shadow(-10px 0 #838383) blur(2px);
          filter: drop-shadow(-10px 0 #838383) blur(2px); }

#left {
  -ms-grid-column: 2;
  -ms-grid-column-span: 1;
  grid-column: 2/3;
  -ms-grid-row: 2;
  -ms-grid-row-span: 1;
  grid-row: 2/3; }

#left:active svg {
  -webkit-filter: drop-shadow(-10px 0 #838383) blur(2px);
          filter: drop-shadow(-10px 0 #838383) blur(2px); }

#center {
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  grid-column: 3/4;
  -ms-grid-row: 2;
  -ms-grid-row-span: 1;
  grid-row: 2/3; }

#right {
  -ms-grid-column: 4;
  -ms-grid-column-span: 1;
  grid-column: 4/5;
  -ms-grid-row: 2;
  -ms-grid-row-span: 1;
  grid-row: 2/3;
  -webkit-transform: rotate(180deg);
      -ms-transform: rotate(180deg);
          transform: rotate(180deg); }

#right:active svg {
  -webkit-filter: drop-shadow(-10px 0 #838383) blur(2px);
          filter: drop-shadow(-10px 0 #838383) blur(2px); }

#down {
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  grid-column: 3/4;
  -ms-grid-row: 3;
  -ms-grid-row-span: 1;
  grid-row: 3/4;
  -webkit-transform: rotate(-90deg);
      -ms-transform: rotate(-90deg);
          transform: rotate(-90deg); }

#down:active svg {
  -webkit-filter: drop-shadow(-10px 0 #838383) blur(2px);
          filter: drop-shadow(-10px 0 #838383) blur(2px); }

.CombatScreen {
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  grid-column: 1/6;
  -ms-grid-row: 1;
  -ms-grid-row-span: 5;
  grid-row: 1/6;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  grid-auto-rows: auto;
  justify-items: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center; }

#meme {
  font-family: GaboDrive, sans-serif;
  -webkit-text-stroke: 1px black;
  color: white;
  text-shadow: 3px 3px 0 #000,
 -1px -1px 0 #000,  
 1px -1px 0 #000,
 -1px 1px 0 #000,
 1px 1px 0 #000;
  font-size: 1.8em;
  margin: auto;
  -webkit-animation-name: stretch;
          animation-name: stretch;
  -webkit-animation-duration: 1.5s;
          animation-duration: 1.5s;
  -webkit-animation-timing-function: ease-out;
          animation-timing-function: ease-out;
  -webkit-animation-delay: 0;
          animation-delay: 0;
  -webkit-animation-iteration-count: initial;
          animation-iteration-count: initial;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  -ms-grid-rows: (1fr)[2];
      grid-template-rows: repeat(2, 1fr);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center; }

#memeLvl {
  -ms-grid-row: 1;
  -ms-grid-row-span: 1;
  grid-row: 1/2;
  -ms-flex-item-align: start;
      -ms-grid-row-align: start;
      align-self: start;
  padding: .2em; }

#memeName {
  -ms-grid-row: 2;
  -ms-grid-row-span: 1;
  grid-row: 2/3;
  -ms-flex-item-align: end;
      -ms-grid-row-align: end;
      align-self: end;
  padding: .2em; }

@media (min-width: 1300px) {
  #meme {
    max-width: 800px;
    max-height: 700px; } }

@media (max-width: 1300px) {
  #meme {
    max-width: 800px;
    max-height: 700px; } }

@media (max-width: 736px) {
  #meme {
    max-width: 480px;
    max-height: 600px; } }

@media (max-width: 480px) {
  #meme {
    max-width: 300px;
    max-height: 350px; } }

@-webkit-keyframes stretch {
  0% {
    -webkit-transform: translate(0px, 0px) rotate(699deg) scale(0);
            transform: translate(0px, 0px) rotate(699deg) scale(0);
    opacity: 0; }
  35% {
    -webkit-transform: translate(0px, 50px) rotate(0deg) scale(1.3);
            transform: translate(0px, 50px) rotate(0deg) scale(1.3); }
  45% {
    -webkit-transform: translate(0px, 50px) rotate(-3deg) scale(1.3);
            transform: translate(0px, 50px) rotate(-3deg) scale(1.3); }
  65% {
    -webkit-transform: translate(0px, 50px) rotate(3deg) scale(1.3);
            transform: translate(0px, 50px) rotate(3deg) scale(1.3); }
  75% {
    -webkit-transform: translate(0px, 50px) rotate(0deg) scale(1.3);
            transform: translate(0px, 50px) rotate(0deg) scale(1.3); }
  94% {
    -webkit-transform: translate(0px, 10px) rotate(-3deg) scale(1.05);
            transform: translate(0px, 10px) rotate(-3deg) scale(1.05); }
  97% {
    -webkit-transform: translate(0px, 0px) rotate(3deg) scale(1);
            transform: translate(0px, 0px) rotate(3deg) scale(1); }
  100% {
    -webkit-transform: translate(0px, 0px) scale(1);
            transform: translate(0px, 0px) scale(1); } }

@keyframes stretch {
  0% {
    -webkit-transform: translate(0px, 0px) rotate(699deg) scale(0);
            transform: translate(0px, 0px) rotate(699deg) scale(0);
    opacity: 0; }
  35% {
    -webkit-transform: translate(0px, 50px) rotate(0deg) scale(1.3);
            transform: translate(0px, 50px) rotate(0deg) scale(1.3); }
  45% {
    -webkit-transform: translate(0px, 50px) rotate(-3deg) scale(1.3);
            transform: translate(0px, 50px) rotate(-3deg) scale(1.3); }
  65% {
    -webkit-transform: translate(0px, 50px) rotate(3deg) scale(1.3);
            transform: translate(0px, 50px) rotate(3deg) scale(1.3); }
  75% {
    -webkit-transform: translate(0px, 50px) rotate(0deg) scale(1.3);
            transform: translate(0px, 50px) rotate(0deg) scale(1.3); }
  94% {
    -webkit-transform: translate(0px, 10px) rotate(-3deg) scale(1.05);
            transform: translate(0px, 10px) rotate(-3deg) scale(1.05); }
  97% {
    -webkit-transform: translate(0px, 0px) rotate(3deg) scale(1);
            transform: translate(0px, 0px) rotate(3deg) scale(1); }
  100% {
    -webkit-transform: translate(0px, 0px) scale(1);
            transform: translate(0px, 0px) scale(1); } }

.combat-log li {
  text-align: left;
  max-height: 200px; }

.combatHpBars {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  -ms-grid-rows: (1fr)[2];
      grid-template-rows: repeat(2, 1fr); }

.memeHp {
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  grid-column: 1/2;
  -ms-grid-row: 1;
  -ms-grid-row-span: 1;
  grid-row: 1/2;
  width: 300px;
  background: lightgrey;
  color: black;
  padding: 5px;
  -ms-flex-line-pack: center;
      align-content: center; }

.memeHpBar {
  background: red;
  font-size: .8em;
  color: white; }

.playerHp {
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  grid-column: 1/2;
  -ms-grid-row: 2;
  -ms-grid-row-span: 1;
  grid-row: 2/3;
  width: 300px;
  background: lightgrey;
  color: black;
  padding: 5px;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  justify-items: center; }

.combat button {
  width: 100px;
  height: 50px;
  margin: 5px; }

@keyframes fogMaze {
  100% {
    background-color: black;
    color: black; } }

@-webkit-keyframes fallIn {
  0% {
    -webkit-transform: scale(10);
            transform: scale(10); } }

@keyframes fallIn {
  0% {
    -webkit-transform: scale(10);
            transform: scale(10); } }

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0; 
  }
  80% {
    opacity: 0; 
  }
  100% {
    opacity: 1; 
  }
  }

@keyframes fadeIn {
  0% {
    opacity: 0; 
  }
  80% {
    opacity: 0; 
  }
  100% {
    opacity: 1; 
  }
  }

@font-face {
  font-family: GaboDrive;
  src: url("./gabo.otf"); }

@font-face {
  font-family: 'Libre Baskerville';
  src: url("./LibreBaskerville-Regular.ttf"); }

